--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="Rock">Rock</button>
-    <button id="Paper">Paper</button>
-    <button id="Scissors">Scissors</button>
+    <div id="choices">
+        <button id="Rock">Rock</button>
+        <button id="Paper">Paper</button>
+        <button id="Scissors">Scissors</button>
+    </div>
 </body>
 </html>
