Add restart and refactor a bit

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <button id="scissors">Scissors</button>
     </div>
     <div id="resultDisplay"></div>
+    <button id="reset">Restart</button>
 </body>
 </html>
